--- a/amplify.yml
+++ b/amplify.yml
@@ -4,13 +4,11 @@ frontend:
     preBuild:
       commands:
         - npm ci
-        - echo "Installing Python dependencies..."
-        - python3 -m pip install --upgrade pip
-        # Install CPU-only version of PyTorch to reduce slug size and build time
-        - python3 -m pip install torch torchvision --index-url https://download.pytorch.org/whl/cpu
-        - python3 -m pip install pandas numpy scikit-learn
-        # Install other requirements from the file if needed, but the above are the core for inference
-        # - python3 -m pip install -r tacrolimus-service/requirements.txt
+        - echo "Installing minimal Python dependencies..."
+        - python3 -m pip install --upgrade pip --no-cache-dir
+        # Install CPU-only version of PyTorch (lightweight) without cache to save space
+        - python3 -m pip install torch --index-url https://download.pytorch.org/whl/cpu --no-cache-dir
+        - python3 -m pip install pandas numpy scikit-learn --no-cache-dir
     build:
       commands:
         - npm run build
@@ -21,4 +19,3 @@ frontend:
   cache:
     paths:
       - node_modules/**/*
-      - ~/.cache/pip
