Fix: Local library vendoring and enhanced API logging

--- a/amplify.yml
+++ b/amplify.yml
@@ -8,9 +8,10 @@ frontend:
         - "python3 --version"
         - "echo '=== DEBUG: Starting Install ==='"
         - "python3 -m pip install --upgrade pip --no-cache-dir"
-        - "python3 -m pip install numpy pandas scikit-learn --no-cache-dir"
-        # The following line caused the error because of the colon in https://
-        - "python3 -m pip install torch --index-url https://download.pytorch.org/whl/cpu --no-cache-dir"
+        # Install libraries LOCALLY into tacrolimus-service/libs so they are bundled
+        - "mkdir -p tacrolimus-service/libs"
+        - "python3 -m pip install numpy pandas scikit-learn -t tacrolimus-service/libs --no-cache-dir"
+        - "python3 -m pip install torch --index-url https://download.pytorch.org/whl/cpu -t tacrolimus-service/libs --no-cache-dir"
         - "echo '=== DEBUG: PreBuild Complete ==='"
     build:
       commands:
